# RT_metal

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  authors
.github/ISSUE_TEMPLATE/: bug_report.md
inc/: fio.h  gui.h  metal_shader.h  rt.h  rt_s.h  rtc.h  rtc_scn.h  rtc_scn_obj.h  rts.h
src/: main.c  rt_init.c  rt_loop.c
src/err/: rt_err.c
src/fio/: fio_read_file.c  fio_read_files.c  fio_zip_load.c  fio_zip_save.c
src/gui/: coroutine_example.c  rt_editor_drag_file.c
src/mtl/: _rt___kernel.metal  _rt__structs.metal  _rt__utils.metal  _rt_plane.metal  _rt_sphere.metal  metal_shader.metal  mtl_basic.metal  mtl_shader_language_example.metal  rt_trace_brdf_d.metal  rt_trace_brdf_g.metal  rt_trace_mod_ggx.metal  rt_trace_mode_color_only.metal  rt_trace_mode_dist.metal  rt_trace_mode_light.metal  rt_trace_mode_normals.metal  rt_trace_mode_normals_angle.metal  sphere_on_metal.metal
src/rtc/: rt_init.c  rt_loop.c  rtc_id_manager.c  rtc_init.c  rtc_loop.c  rtc_scn.c
src/rts/: rts_free.c  rts_init.c
